# Pyegi_Scripts

./: LICENSE  README.md
Color & Blur Tracker/: main.py  pyproject.toml
ColorMania/: main.py  pyproject.toml  settings.json
Disintegration/: main.py  pyproject.toml
Rotation/: main.py  pyproject.toml  settings.json
SelectFX/: main.py  pyproject.toml
Trace/: main.py  pyproject.toml
tmp/: pyproject.toml
