[tool.poetry]
authors = [
  "DrunkSimurgh <saman.9267@gmail.com>",
]
description = "Track color and blur (and alpha (experimental))."
name = "Color & Blur Tracker"
version = "0.0.2"

[tool.poetry.dependencies]
python = "^3.10"
pyonfx = "^0.11.0"
toml = "^0.10.2"
appdirs = "^1.4.4"
videotimestamps = "^1.1.0"
pyqt6 = "^6.10.2"
opencv-python = "^4.13.0.92"

[tool.poetry.dev-dependencies]

[tool.pyegi]
describer-version = "0.1.0"
name = "[ts] Color & Blur Tracker"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
