[tool.poetry]
authors = [
  "DrunkSimurgh <saman.9267@gmail.com>",
]
description = "Trace the drawn line either with strokes or the text."
name = "Trace"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.10"
pyonfx = "^0.11.0"
toml = "^0.10.2"
appdirs = "^1.4.4"
videotimestamps = "^1.1.0"
pyqt6 = "^6.10.2"

[tool.poetry.dev-dependencies]

[tool.pyegi]
describer-version = "0.1.0"
name = "[fx] Trace"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
